<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.ConnectToServerActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-5dp">

    <ImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_view_title"
        android:textColor="@android:color/black"
        android:fontFamily="@font/chewyregular"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_view_username"
        android:textColor="@android:color/black"
        android:fontFamily="@font/chewyregular"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="340dp"
        android:layout_height="59dp"
        android:layout_marginTop="4dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/edit_text_username_hint"
        android:textColorHint="@color/black"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/chewyregular"
        android:textSize="18sp"
        android:background="@color/light_green"
        app:backgroundTint="@color/light_green"
        app:layout_constraintBottom_toTopOf="@+id/textViewResponse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsername"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textViewResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_view_response"
        android:textColor="@android:color/black"
        android:fontFamily="@font/chewyregular"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonConnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_connect"
        android:textColor="@android:color/black"
        android:fontFamily="@font/chewyregular"
        android:textSize="18sp"
        android:background="@drawable/rippleeffect"
        app:backgroundTint="#FFE500"
        app:layout_constraintBottom_toTopOf="@+id/buttonReconnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResponse"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonReconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_reconnect"
        android:textColor="@android:color/black"
        android:fontFamily="@font/chewyregular"
        android:textSize="18sp"
        android:background="@drawable/rippleeffect"
        app:backgroundTint="#FFE500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConnect"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
